--- a/less/helpers/variables.less
+++ b/less/helpers/variables.less
@@ -1,3 +1,7 @@
 @gray: #56534c;
 @brown: #a47d5e;
 @gold: #c9b176;
+@tablet-width: 768px;
+@desktop-small-width: 960px;
+@desktop-width: 1260px;
+@max-width: 1360px;
