--- a/less/blocks/navigation.less
+++ b/less/blocks/navigation.less
@@ -10,14 +10,21 @@
   &--opened {
     background-color: fade(@gray, 90%);
     height: 100%;
+    width: 100%;
   }
+}
+
+.navigation__wrapper {
+  min-height: 70px;
+  height: 100%;
+  position: relative;
 }
 
 .navigation__toggle {
   position: absolute;
   z-index: 10;
   top: 20px;
-  right: 20px;
+  right: 40px;
   
   border: none;
   outline: none;
@@ -48,7 +55,6 @@
   width: 100%;
   padding: 0;
   margin: 0;
-  padding-left: 20px;
   box-sizing: border-box;
 
   display: flex;
@@ -73,4 +79,90 @@
   font-size: 14px;
   line-height: 24px;
   letter-spacing: 0.3em;
+}
+
+@media (min-width: @tablet-width) {
+  .navigation__wrapper {
+    .container(640px);
+  }
+
+  .navigation__link {
+    font-size: 16px;
+    line-height: 30px;
+  }
+
+}
+
+@media (min-width: @desktop-small-width) {
+  .navigation {
+    position: static;
+    &--opened {
+      background-color: transparent;
+      height: 100%;
+      width: 100%;
+    }
+  }
+
+  .navigation__wrapper {
+    .container(530px);
+  }
+
+  .navigation__toggle {
+    display: none;
+  }
+
+  .navigation__list {
+    position: static;
+    flex-direction: row;
+    justify-content: center;
+    align-items: center;
+    flex-wrap: wrap;
+    min-height: 70px;
+
+    &--closed {
+      display: flex;
+    }
+  }
+
+  .navigation__link {
+    padding: 0 15px;
+    font-size: 12px;
+    line-height: 24px;
+    letter-spacing: 0.2em;
+  }
+}
+
+@media (min-width: @desktop-width) {
+  .navigation__wrapper {
+    .container(900px);
+  }
+
+  .navigation__link {
+    padding: 0 25px;
+    font-size: 13px;
+    line-height: 24px;
+    letter-spacing: 0.3em;
+  }
+
+  .navigation__item {
+    position: relative;
+    &:not(:first-child)::before {
+      position: absolute;
+      top: center;
+      left: 0;
+      transform: translateX(-50%);
+      display: block;
+      content: "~";
+      color: white;
+      font-size: 14px;
+      line-height: 24px;
+    }
+  }
+}
+
+@media (min-width: @max-width) {
+  .navigation__link {
+    padding: 0 35px;
+    font-size: 14px;
+  }
 }
