--- a/less/blocks/page-main.less
+++ b/less/blocks/page-main.less
@@ -1,3 +1,20 @@
 .page-main {
   .container();
 }
+
+
+@media (min-width: @tablet-width) {
+
+}
+
+@media (min-width: @desktop-small-width) {
+  
+}
+
+@media (min-width: @desktop-width) {
+  
+}
+
+@media (min-width: @max-width) {
+  
+}
