--- a/less/blocks/social.less
+++ b/less/blocks/social.less
@@ -36,7 +36,7 @@
     display: block;
     width: 16px;
     height: 16px;
-    margin: 0 7px;
+    padding: 0 7px;
     background-repeat: no-repeat;
     background-position: center center;
     &--twitter {
@@ -53,12 +53,12 @@
 
 @media (min-width: @desktop-width) {
   .social__link {
-    margin: 0 10px;
+    padding: 0 10px;
   }
 }
 
 @media (min-width: @max-width) {
   .social__link {
-    margin: 0 14px;
+    padding: 0 14px;
   }
 }
