--- a/less/helpers/mixins.less
+++ b/less/helpers/mixins.less
@@ -37,3 +37,17 @@
   line-height: 24px;
   letter-spacing: 0.1em;
 }
+
+.style-title-desktop() {
+  font-size: 48px;
+  line-height: 30px;
+}
+
+.style-subtitle-desktop() {
+  font-size: 14px;
+  line-height: 30px;
+}
+
+.style-descroption-desktop() {
+
+}
