adaptive for dishes-block

--- a/css/style.css
+++ b/css/style.css
@@ -1151,21 +1151,20 @@ body {
   flex-direction: column-reverse;
   justify-content: center;
   filter: drop-shadow(0px 0px 15px rgba(0, 0, 0, 0.3));
+  font-size: 0;
 }
 .dishes__item::after {
   position: absolute;
+  bottom: 0;
+  left: 0;
   z-index: 20;
-  bottom: 6px;
-  left: 7px;
   content: "";
   display: block;
-  width: 0px;
-  height: 0px;
-  border: 17px solid white;
-  border-left-color: transparent;
-  border-right-color: transparent;
-  border-top-color: transparent;
-  transform: rotate(45deg);
+  width: 23px;
+  height: 23px;
+  background-color: #fff;
+  -webkit-clip-path: polygon(0 0, 100% 0, 100% 100%);
+  clip-path: polygon(0 0, 100% 0, 100% 100%);
 }
 .dishes__item--hidden {
   display: none;
@@ -1176,6 +1175,9 @@ body {
 }
 .dishes__description {
   position: relative;
+  display: flex;
+  flex-direction: column;
+  justify-content: flex-start;
   padding: 40px 15px;
   padding-top: 100px;
   background-color: white;
@@ -1232,7 +1234,7 @@ body {
   background-image: url("../img/fields.jpg");
   background-size: contain;
   font-family: "Alegreya", serif;
-  box-shadow: 0px 0px 20px 5px rgba(0, 0, 0, 0.3);
+  box-shadow: 0px 0px 30px 5px rgba(0, 0, 0, 0.3);
 }
 .dishes__time-text {
   color: #a47d5e;
@@ -1261,6 +1263,174 @@ body {
 .dishes__tabs {
   position: absolute;
   top: 30px;
+}
+@media (min-width: 768px) {
+  .dishes__wrapper {
+    max-width: 640px;
+    margin-left: auto;
+    margin-right: auto;
+  }
+  .dishes__tabs {
+    top: 40px;
+    left: 50%;
+    margin-left: -210px;
+  }
+  .dishes__item::after {
+    width: 54px;
+    height: 54px;
+  }
+  .dishes__description {
+    padding: 50px 70px;
+    padding-top: 140px;
+  }
+  .dishes__time {
+    right: -20px;
+    bottom: -110px;
+    width: 150px;
+    height: 150px;
+    box-shadow: 0px 0px 50px 5px rgba(0, 0, 0, 0.25);
+  }
+  .dishes__time-text {
+    font-size: 16px;
+    line-height: 16px;
+  }
+  .dishes__time-value {
+    font-size: 70px;
+    line-height: 60px;
+  }
+  .dishes__time-unit {
+    font-size: 16px;
+    line-height: 25px;
+  }
+}
+@media (min-width: 960px) {
+  .dishes__wrapper {
+    max-width: 800px;
+    margin-left: auto;
+    margin-right: auto;
+  }
+  .dishes__item {
+    flex-direction: row;
+  }
+  .dishes__item::after {
+    width: 50px;
+    height: 50px;
+  }
+  .dishes__description {
+    height: 512px;
+    box-sizing: border-box;
+    text-align: left;
+    padding-left: 40px;
+    padding-right: 40px;
+    padding-bottom: 130px;
+    padding-top: 75px;
+    box-shadow: -2px 0 0 0px rgba(0, 0, 0, 0.3);
+  }
+  .dishes__description::before {
+    content: "";
+    position: absolute;
+    left: -27px;
+    top: 50%;
+    margin-top: -25px;
+    display: block;
+    width: 50px;
+    height: 50px;
+    border-radius: 50%;
+    background-color: #fff;
+    border: 2px solid rgba(0, 0, 0, 0.45);
+    border-right-color: transparent;
+    border-top-color: transparent;
+    transform: rotate(45deg);
+  }
+  .dishes__description::after {
+    content: "";
+    position: absolute;
+    left: -6px;
+    top: 50%;
+    display: block;
+    width: 9px;
+    height: 16px;
+    margin-top: -7px;
+    background-image: url("../img/icon_toggle.png");
+    background-repeat: no-repeat;
+    background-position: center center;
+  }
+  .dishes__title {
+    text-align: left;
+    font-size: 38px;
+  }
+  .dishes__subtitle {
+    font-size: 14px;
+    line-height: 30px;
+    text-align: left;
+    line-height: 24px;
+  }
+  .dishes__text {
+    text-align: left;
+    margin-top: 40px;
+  }
+  .dishes__time {
+    right: -75px;
+    top: -30px;
+    width: 150px;
+    height: 150px;
+  }
+  .dishes__image {
+    width: 380px;
+    height: 512px;
+  }
+  .dishes__tabs {
+    top: auto;
+    left: auto;
+    bottom: 40px;
+    right: 0;
+  }
+}
+@media (min-width: 1260px) {
+  .dishes {
+    padding-top: 80px;
+  }
+  .dishes__wrapper {
+    max-width: 970px;
+    margin-left: auto;
+    margin-right: auto;
+  }
+  .dishes__title {
+    font-size: 48px;
+    line-height: 30px;
+  }
+  .dishes__image {
+    width: 420px;
+  }
+  .dishes__description {
+    padding-left: 63px;
+    padding-right: 63px;
+    padding-bottom: 160px;
+  }
+  .dishes__time {
+    right: -100px;
+    top: -40px;
+    width: 200px;
+    height: 200px;
+  }
+  .dishes__time-text {
+    font-size: 18px;
+    line-height: 30px;
+  }
+  .dishes__time-value {
+    font-size: 92px;
+    line-height: 80px;
+  }
+  .dishes__time-unit {
+    font-size: 18px;
+    line-height: 30px;
+  }
+}
+@media (min-width: 1360px) {
+  .dishes {
+    padding-top: 140px;
+    padding-bottom: 110px;
+  }
 }
 .tabs {
   display: flex;
@@ -1333,6 +1503,73 @@ body {
 .tabs__image {
   width: 50px;
   height: 50px;
+}
+@media (min-width: 768px) {
+  .tabs {
+    width: 420px;
+  }
+  .tabs__list {
+    width: 270px;
+  }
+  .tabs__image {
+    width: 70px;
+    height: 70px;
+  }
+  .tabs__arrow--prev {
+    margin-left: 40px;
+  }
+  .tabs__arrow--next {
+    margin-right: 40px;
+  }
+}
+@media (min-width: 960px) {
+  .tabs {
+    width: 420px;
+  }
+  .tabs__list {
+    width: 270px;
+  }
+}
+@media (min-width: 1260px) {
+  .tabs {
+    width: 550px;
+  }
+  .tabs__item {
+    padding: 0 15px;
+  }
+  .tabs__list {
+    width: 360px;
+  }
+  .tabs__image {
+    width: 90px;
+    height: 90px;
+  }
+  .tabs__arrow {
+    width: 30px;
+    height: 30px;
+  }
+  .tabs__arrow--prev {
+    margin-left: 60px;
+  }
+  .tabs__arrow--next {
+    margin-right: 60px;
+  }
+  .tabs__arrow::after {
+    position: absolute;
+    top: 9px;
+    width: 5px;
+    height: 5px;
+  }
+  .tabs__arrow--prev::after {
+    left: 10px;
+    border-top-color: transparent;
+    border-right-color: transparent;
+  }
+  .tabs__arrow--next::after {
+    left: 7px;
+    border-bottom-color: transparent;
+    border-left-color: transparent;
+  }
 }
 .breakfast {
   position: relative;
