--- a/css/style.css
+++ b/css/style.css
@@ -918,7 +918,8 @@ body {
 .about__slogan {
   position: absolute;
   top: 50%;
-  transform: translateY(-50%);
+  left: 50%;
+  transform: translate(-50%, -50%);
   width: 279px;
   height: 184px;
   padding-top: 95px;
