--- a/less/blocks/about.less
+++ b/less/blocks/about.less
@@ -58,7 +58,8 @@
 .about__slogan {
   position: absolute;
   top: 50%;
-  transform: translateY(-50%);
+  left: 50%;
+  transform: translate(-50%, -50%);
 
   width: 279px;
   height: 184px;
